--- a/controller/templates/global_map.html
+++ b/controller/templates/global_map.html
@@ -10,29 +10,44 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="../static/css/index.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.0/dist/MarkerCluster.css"/>
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.0/dist/MarkerCluster.Default.css"/>
-
-
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin=""/>
-
-     <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
+    
+    <link href="../static/css/index.css" rel="stylesheet">
+    <!-- <link href="../static/css/travel-view.css" rel="stylesheet"> -->
+    <link href="../static/css/maps.css" rel="stylesheet">
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    
     <script src="https://unpkg.com/leaflet.markercluster@1.5.0/dist/leaflet.markercluster-src.js"></script>
 
-    <script src="../static/js/global_map.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     
+    <script src="../../node_modules/overlapping-marker-spiderfier-leaflet/dist/oms.js"></script>
+    <script type="text/javascript" src="https://stamen-maps.a.ssl.fastly.net/js/tile.stamen.js?v1.3.0"></script>
+
+    <script src="../static/js/global_map.js"></script>
+    <script src="../static/js/map_utils.js"></script>
+    <!-- <script src="../static/js/file_handler.js"></script> -->
+
+    <!-- <script> 
+        $(document).ready(function() { // this runs as soon as the page is ready (DOM is loaded)
+            const script = document.createElement('script');
+            script.src = '/static/js/header_control.js';
+            document.head.appendChild(script);
+        });
+    </script>  -->
+
     <add name="Access-Control-Allow-Headers" value="*" />
 </head>
 
@@ -44,14 +59,14 @@
         <a class="navbar-brand mt-2 mt-lg-0" href="/">
             <img src="{{url_for('static', filename='wanderpi-icon.svg')}}" height="35"  alt="">
         </a>
-        <h1 class=" mt-2 mt-lg-0">{{ travel.name }}</h1>
-        {% if wanderpis|length > 0 %} 
-                <div class="d-flex align-items-center">
-                    <button id="new_wanderpi" type="button" onclick="window.location.href='{{ url_for('home.record', travel_id='{{ travel.id }}') }}'" class="btn btn-primary me-3">New <i class="bi bi-plus-square"></i></button>
-                    <button id="download_all_wanderpis" data-bs-toggle="modal" data-bs-target="#exampleModalCenter" type="button"  class="btn btn-primary me-3"><i class="bi bi-file-earmark-arrow-down"></i></button>
-                </div>
-        {% endif %}
         
+        <h1 class=" mt-2 mt-lg-0">{{ travel.name }}</h1>
+        <h4 id="gps_text"> </h4>
+        <!-- <div id="header-buttons">
+            {% with travel=travel , context=False %}
+                {% include "travel_header_buttons.html" %}
+            {% endwith %}
+        </div> -->
 
     </div>    
 </nav>
@@ -66,29 +81,23 @@
             <div class="card h-100">
                 <div class="card-body">
                     
-                    <div id="map-container-global" class="z-depth-1-half map-responsive" style="height: 500px">
-                        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11901.749542382111!2d1.8415882000000003!3d41.77578655!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1626793033074!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
+                    <div id="map-container-global" class="map-responsive" style="height: 500px">
                     </div>
-                    <a id="gps_text" > </a>
-
+                    
+                    
                     {% block content %}
                     {% for item in wanderpis %}
                         <script>
-                        plot_map("{{ item.lat }}", "{{ item.long }}", "{{ item.name }}", "{{ item.thumbnail_url }}", "{{ item.id }}");
+                        plot_map("{{ item.lat }}", "{{ item.long }}", "{{ item.name }}", "{{ item.file_thumbnail_path }}", "{{ item.id }}");
                         </script>
                     {% endfor %}
                     {% endblock %}
+                    
                 </div>
             </div>
           </div>
     </div>
     
-</div>
-
-<div class="top">
-    <div class="recorder" id="recorder" align="center">
-        <script type="text/javascript" src="/static/js/download_handling.js"></script>
-    </div>
 </div>
 
 </body>
