--- a/controller/templates/travel_view.html
+++ b/controller/templates/travel_view.html
@@ -12,36 +12,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-
+    <link href="../static/css/travel-view.css" rel="stylesheet">
+    <link href="../static/css/maps.css" rel="stylesheet">
     
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+
+    {{ dropzone.load_css() }}
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
    
     <!-- jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     
-    <script> 
-        // $(function(){
-        //     $("#dinamic-modal-body").load("/static/html-templates/download_modal.html"); 
-        //     //$("#context-menu").load("/static/html-templates/context_menu.html"); 
-        // });
+    <script src="/static/js/page_utils.js"></script>
+    
+    <!--Import SocketIO-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
 
+
+    <script> 
         $(document).ready(function() { // this runs as soon as the page is ready (DOM is loaded)
             const script = document.createElement('script');
-            script.src = '/static/js/file_handler.js';
+            script.src = '/static/js/header_control.js';
+            const script1 = document.createElement('script');
+            script1.src = '/static/js/file_handler.js';
             document.head.appendChild(script);
+            document.head.appendChild(script1);
         });
     </script> 
 
-    <!--Import SocketIO-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.1/socket.io.js"></script>
-        
+    
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
 
-    <link href="../static/css/travel-view.css" rel="stylesheet">
-    <script src="/static/js/page_utils.js"></script>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+   
+    <script src="https://unpkg.com/leaflet.markercluster@1.5.0/dist/leaflet.markercluster-src.js"></script>
+
 </head>
 
 <body>
+
 
 
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light" style="background-color: #B6E4FF;">
@@ -53,28 +70,39 @@
 
         <h1 class=" mt-2 mt-lg-0">{{ travel.name }}</h1>
 
-        <div class="d-flex align-items-center">
-                
-                <!-- <button id="new_wanderpi" data-bs-toggle="tooltip" data-bs-placement="bottom" title="New Wanderpi" type="button" onclick="window.location.href='{{ url_for('home.record', travel_id=travel.id) }}'" class="btn btn-danger me-3"><i class="bi bi-plus-lg"></i></button>
-                 -->
+        {% if search_term %}
+        <button onclick="window.location.href='/travel/{{ travel.id }}'" class="mt-2 mt-lg-0 btn btn-info">{{ search_term }}<i class="bi bi-x"></i></button>
+        {% endif %}
+
+        <div class="d-flex align-items-center">        
                 <div id="header-buttons">
+                    <button data-bs-toggle="modal" data-bs-target="#bulkEditModal" type="button" id="bulk-edit-button" class="btn btn-primary btn-fab me-3" data-bs-toggle="tooltip" data-bs-placement="left" title="Edit wanderpis" id="new_wanderpi">
+                        <i class="bi bi-pencil"></i>
+                    </button>
+                    
                     {% with travel=travel , context=False %}
                         {% include "travel_header_buttons.html" %}
                     {% endwith %}
                 </div>
                 {% if wanderpis|length > 0 %} 
                 
-                    <!-- <button id="global_map" type="button" onclick="window.location.href='{{ url_for('home.global_map', travel_id=travel.id) }}'" class="btn btn-primary me-3"><i class="bi bi-map"></i></button> -->
-
                     <form class="d-flex input-group w-auto">
                         <input
                           type="search"
+                          id="search-input"
                           class="form-control"
+                          {% if search_term %}
+                          placeholder="{{ search_term }}"
+                          value="{{ search_term }}"
+                          {% else %}
                           placeholder="Type query"
+                          {% endif %}
                           aria-label="Search"
                         />
                         <button
                           class="btn btn-outline-primary"
+                          id="search-button"
+                          onclick="searchWanderpis('{{ travel.id }}')"
                           type="button"
                           data-mdb-ripple-color="dark"
                         >
@@ -82,14 +110,45 @@
                         </button>
                     </form>
                 {% endif %}
-
-                <!-- <button id="logout" type="button" onclick="window.location.href='{{ url_for('user.logout') }}'" class="btn btn-link px-3 me-2">Logout</button> -->
-
         </div>
 
     </div>    
 </nav>
 
+<div class="modal fade" id="bulkEditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalCenterTitle">What would you like to do?</h5>
+        </div>
+        <div class="modal-body">
+            <div class="container mx-auto">
+                <h4> Edit info: </h4> 
+                
+                <div class="row">
+                <div id="map-container-global" style="height: 300px">
+                </div>
+
+                <!-- <div class="input-group input-group-sm mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text" id="inputGroup-sizing-sm">Location</span>
+                    </div>
+                    <input id="new-location-input" type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
+                </div> -->
+                <button id="edit-selected-files" onclick="editSelectedFiles('{{ travel.id }}')" type="button" class="btn btn-primary">Edit them</button>                  
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button id="delete-selected-files" onclick="deleteSelectedFiles('{{ travel.id }}')" type="button" class="btn btn-primary">Delete them</button> 
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>     
+          <button id="upload-button" type="button" class="btn btn-primary">Go ahead</button>  
+        </div>
+      </div>
+    </div>
+</div>
+
+{% block content %}
 <div class="modal fade" id="uploadFileModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
@@ -98,27 +157,21 @@
         </div>
         <div class="modal-body">
             <label class="form-label" for="customFile">You can upload video and images</label>
-            <p>
-                <ul class=flashes>
-                    <li id="info-text"></li>
-                    <li id="info-text-socket"></li>
-                </ul>
-            </p>
-            <form method="post" id="file_form" enctype="multipart/form-data">
-                <input id="file-input" name="files[]" type="file" class="form-control"  multiple>
-                <button id="travel_id" style="display: none" value="{{ travel.id }}"> </button>
-                <!-- <button id="upload-button" type="submit" value="Submit" class="btn btn-primary">Go ahead</button> -->
-            </form>
+            
+                {{ dropzone.create('/upload/' + travel.id) }}
+                    
+                {{ dropzone.load_js() }}
+                
+                {{ dropzone.config() }}
+              
             <div class="container mx-auto">
-                <!-- <a id="info-text"> </a>
-                <a id="info-text-socket"> </a> -->
                 <progress id="progress-bar"></progress>
             </div>
-            <button id="process-upload-button" onclick="startProcessingUploadFolder('{{ travel.id }}')" type="button" class="btn btn-primary">Process Uploads Folder</button>  
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>     
-          <button id="upload-button" type="button" class="btn btn-primary">Go ahead</button>  
+          <button id="process-upload-button" onclick="startProcessingUploadFolder('{{ travel.id }}')" type="button" class="btn btn-primary">Process Uploads Folder</button>  
+          <button id="close-button" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>     
+          <!-- <button id="upload-button" type="button" class="btn btn-primary">Go ahead</button>   -->
         </div>
       </div>
     </div>
@@ -133,16 +186,16 @@
 <div class="py-4">
     <div class="container-fluid">
         <!-- <div class="row hidden-md-up"> -->
-            {% block content %}
+           
                 {% if wanderpis|length > 0 %}     
                 <div class="row">
                     {% for post in wanderpis %}
                         <div class="col-sm-12 col-md-4 col-lg-3 pb-4"> 
-                            <div class="card h-100">
+                            <div id="{{ post.id }}" class="card h-100">
                                    
                                 <div class="card-body">
                                     <a href="/file/{{ post.id }}"> <img class="camera-view-responsive card-img-top" src="{{ post.file_thumbnail_path }}"></img></a>
-                                 
+
                                     <h5 class="card-title" href="/file/{{ post.id }}"> {{ post.name }} </h5>
                                     
                                     <div class="row mb-2">
@@ -162,8 +215,13 @@
 
                                     <div class="card-footer text-center bg-transparent border-light" role="group" aria-label="Basic example">
                                         <button id="download_video" type="button" onclick="window.location.href='/uploads/{{ travel.id }}/{{ post.id }}'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-file-arrow-down-fill"></i></button>
-                                        <button id="share_video" type="button"  onclick="shareVideo({{ post.id }})" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-share"></i></button>
+                                        <button id="share_video" type="button"  onclick="shareVideo('{{ post.id }}')" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-share"></i></button>
                                         <button id="delete_file" type="button"  onclick="window.location.href='{{ url_for('files.delete_file', file_id=post.id) }}'" class="btn btn-outline-secondary btn-block btn-responsive"><i class="bi bi-trash"></i></button>
+                                    </div>
+
+                                    
+                                    <div class="form-check">
+                                        <input class="form-check-input" id="card-selection-button-{{ post.id }}" onclick="selectCard('{{ post.id }}')" type="checkbox" value="">
                                     </div>
                                 </div>
                             </div>    
@@ -197,16 +255,30 @@
                         <div class="card mx-auto h-100">
                                
                             <div class="card-body">
-                                <a onclick="window.location.href='/record/{{ travel.id }}'"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
-                                <h5 class="card-title text-center"> New Wanderpi </h5>
+                                <!-- <a onclick="window.location.href='/record/{{ travel.id }}'"> <img class="camera-view-responsive mx-auto d-block card-img-top" width="200" height="200" src="/static/images/add-more-icon.svg"></img></a>
+                                <h5 class="card-title text-center"> New Wanderpi </h5> -->
+                            
+                                <div class="container">
+                                    <div class="row mb-2">
+                                        <button onclick="window.location.href='{{ url_for('home.record', travel_id=travel.id) }}'" type="button" class="btn btn-info me-3" style="height: 200px;" data-bs-toggle="tooltip" data-bs-placement="left" title="New Wanderpi" id="new_wanderpi">
+                                            <i class="bi bi-plus-lg"> Record new Wanderpi</i>
+                                        </button>
+                                        <h3 class="text-center"> or </h3>
+                                        <button href="#" type="button" class="btn btn-success me-3" style="height: 200px;"  data-bs-toggle="modal" data-bs-target="#uploadFileModal"  id="upload_files">
+                                            <i class="bi bi-file-earmark-arrow-up"> Upload a Wanderpi</i>
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
                         </div>    
                     </div>
                 {% endif %} 
-            {% endblock %}    
+           
         <!-- </div> -->
     </div>
 </div>
+
+{% endblock %}    
 
 <div id="context-menu">
     {% with travel=travel %}
