--- a/controller/templates/single_video_view.html
+++ b/controller/templates/single_video_view.html
@@ -115,14 +115,24 @@
               <div class="card-body">
                   <div id="file-map" class="camera-view-responsive" style="height: 480px">
                   </div>
-
-                  <div class="col-md-2 col-xl-6 align-self-center">
+                  <div class="row">
+                    <div class="col-md-2 col-xl-6 align-self-center">
                       <h5 class="card-title"> GPS Information: </h3>
                       <p class="ml-5 float-right bi-compass"></i><span id="latitude_text" class="card-text d-inline-block"></span>
                       <p class="ml-5 float-right bi-compass"></i><span id="longitude_text" class="card-text d-inline-block"></span>
                       <p class="ml-5 float-right bi-geo-alt"></i><span id="address_text" class="card-text d-inline-block"></span>
                       <p class="ml-5 float-right bi bi-binoculars"></i><span id="distance-result" class="card-text d-inline-block"></span>
-                  </div>  
+                  </div> 
+                  
+                  <div class="col-md-2 col-xl-6 align-self-center">
+                    <h5 class="card-title"> {{ stop.name }}</h3>
+                    <p class="ml-5 float-right bi-compass"></i><span id="latitude_text" class="card-text d-inline-block"> {{ stop.lat }}</span>
+                    <p class="ml-5 float-right bi-compass"></i><span id="longitude_text" class="card-text d-inline-block"> {{ stop.long }}</span>
+                    <p class="ml-5 float-right bi-geo-alt"></i><span id="address_text" class="card-text d-inline-block">{{ travel.name }}</span>
+                    <p class="ml-5 float-right bi bi-binoculars"></i><span id="distance-result" class="card-text d-inline-block">{{ travel.name }}</span>
+                </div>
+                  </div>
+                    
               </div>
           </div>
         </div>
